fix/ fontSize and gap

--- a/src/home/WorkSection/WorkSection.module.css
+++ b/src/home/WorkSection/WorkSection.module.css
@@ -2,13 +2,13 @@
     display: flex;
     align-items: center;
     flex-wrap: wrap;
-    gap: 1rem;
+    gap: 3rem;
     justify-content: center;
 }
 
 .card {
-    width: 640px;
-    height: 450px;
+    width: 670px;
+    height: 470px;
     
 }
 
@@ -28,9 +28,9 @@
 .cardDescription {
     font-family: 'Bai Jamjuree', sans-serif;
     font-weight: 500;
-    line-height: 24px;
+    line-height: 21px;
     color: hsla(0, 0%, 100%, 0.739);
-    font-size: 14px;
+    font-size: 15px !important;
     margin-top: 10px;
     text-align: justify !important;
     white-space: pre-line !important;
